--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/sv-cart/sv-cart/css/style.css">
 </head>
 <body onload="showcountsp();">
     <div class="giohang">
-        <a onclick="showcart();"><img src="images/cart.png"><span id="countsp">0</span></a>
+        <a onclick="showcart();"><img src="/sv-cart/sv-cart/images/cart.png"><span id="countsp">0</span></a>
     </div>
     <div id="showcart">
         <table>
@@ -22,7 +22,7 @@
             <tbody id="mycart">
             </tbody>
             <tr>
-                <a href="thanhtoan.html"><button type="button" class="thanhtoan">Chốt đơn và thanh toán</button></a>
+                <a href="/sv-cart/sv-cart/thanhtoan.html"><button type="button" class="thanhtoan">Chốt đơn và thanh toán</button></a>
             </tr>
         </table>
     </div>
@@ -34,7 +34,7 @@
         <div class="row mb menu">
             <ul>
                 <li><a href="index.html">Trang chủ</a></li>
-                <li><a href="thanhtoan.html">Giỏ hàng</a></li>
+                <li><a href="/sv-cart/sv-cart/thanhtoan.html">Giỏ hàng</a></li>
                 <li><a href="#">Liên hệ</a></li>
                 <li><a href="#">Góp ý</a></li>
                 <li><a href="#">Hỏi đáp</a></li>
@@ -43,7 +43,7 @@
         <div class="row mb ">
             <div class="row">
                 <div class="banner mb">
-                    <img src="images/0.jpg" id="Anh">
+                    <img src="/sv-cart/sv-cart/images/0.png" id="Anh">
                     <div class="btn_container">
                         <button type="button" id="pre" onclick="choice(this);"> < </button>
                         <button type="button" id="nex" onclick="choice(this);"> > </button>
@@ -52,63 +52,63 @@
             </div>
             <div class="row">
                 <div class="boxsp mr">
-                    <div class="row img"><img src="images/1.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/1.png" alt=""></div>
                     <p>$<span>10</span></p>
                     <a href="#">Đồng hồ</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp mr">
-                    <div class="row img"><img src="images/2.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/2.png" alt=""></div>
                     <p>$<span>20</span></p>
                     <a href="#">Laptop</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp ">
-                    <div class="row img"><img src="images/3.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/3.png" alt=""></div>
                     <p>$<span>30</span></p>
                     <a href="#">Đồng hồ trắng</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp mr">
-                    <div class="row img"><img src="images/4.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/4.png" alt=""></div>
                     <p>$<span>40</span></p>
                     <a href="#">Đồng hồ đen</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp mr">
-                    <div class="row img"><img src="images/5.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/5.png" alt=""></div>
                     <p>$<span>50</span></p>
                     <a href="#">Nón</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp ">
-                    <div class="row img"><img src="images/6.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/6.png" alt=""></div>
                     <p>$<span>60</span></p>
                     <a href="#">Vali</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp mr">
-                    <div class="row img"><img src="images/7.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/7.png" alt=""></div>
                     <p>$<span>70</span></p>
                     <a href="#">Điện thoại</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp mr">
-                    <div class="row img"><img src="images/8.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/8.png" alt=""></div>
                     <p>$<span>80</span></p>
                     <a href="#">Điện thoại cam</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
                     <button onclick="themvaogiohang(this)">Đặt hàng</button>
                 </div>
                 <div class="boxsp ">
-                    <div class="row img"><img src="images/9.jpg" alt=""></div>
+                    <div class="row img"><img src="/sv-cart/sv-cart/images/9.png" alt=""></div>
                     <p>$<span>90</span></p>
                     <a href="#">Đồng hồ tròn trắng</a>
                     <input type="number" name="soluong" min="1" max="10" value="1">
@@ -117,7 +117,7 @@
             </div>
         </div>
     </div>
-    <script src="js/cart(2).js"></script>
+    <script src="/sv-cart/sv-cart/js/cart(2).js"></script>
 </body>
 
 </html>
